estilos a la web

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,12 +64,16 @@ img {
 }
 
 /* Degradados */
-.degradado-verde{
-    /* para darle gradient al texto debemos primero darle transparencia ya q tiene un color y luego darle color al fondo para por ultimo aplicarlo al texto */
-    color: transparent;
-    background: linear-gradient(to right, var(--primario) 0%, var(--secundario) 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
+.degradado-verde {
+  /* para darle gradient al texto debemos primero darle transparencia ya q tiene un color y luego darle color al fondo para por ultimo aplicarlo al texto */
+  color: transparent;
+  background: linear-gradient(
+    to right,
+    var(--primario) 0%,
+    var(--secundario) 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
 }
 
 /* Header */
@@ -85,44 +89,72 @@ img {
   }
 }
 
-.texto-header{
-    text-align: center;
-    padding-top: var(--separacion);
+.texto-header {
+  text-align: center;
+  padding-top: var(--separacion);
 }
 
-@media (min-width: 768px) { 
-    .texto-header{
-        text-align: left;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding: 0;
-    }
- }
- .texto-header p{
-    margin: 0;
- }
+@media (min-width: 768px) {
+  .texto-header {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0;
+  }
+}
+.texto-header p {
+  margin: 0;
+}
 
- .tagline-producto{
-    font-size: 3rem;
-    font-weight: 900;
- }
- .nombre-producto{
-    font-size: 6rem;
+.tagline-producto {
+  font-size: 3rem;
+  font-weight: 900;
+}
+.nombre-producto {
+  font-size: 6rem;
+  margin: 0;
+}
+@media (min-width: 768px) {
+  .nombre-producto {
+    font-size: 10rem;
+    line-height: 1;
+  }
+}
+.precio-producto span {
+  font-size: 6rem;
+  font-weight: 900;
+}
+
+/* ICONOS */
+.iconos {
+  padding: var(--separacion) 0;
+}
+@media (min-width: 768px) {
+  .iconos {
+    display: flex;
+    gap: 2rem;
+  }
+}
+
+.icono {
+  text-align: center;
+  margin-bottom: calc(var(--separacion) / 2);
+}
+.icono:last-of-type {
+  margin: 0;
+}
+@media (min-width: 768px) {
+  .icono {
     margin: 0;
- }
- @media (min-width: 768px) { 
-    .nombre-producto{
-        font-size: 10rem;
-        line-height: 1;
-    }
   }
-  .precio-producto span{
-    font-size: 6rem;
-    font-weight: 900;
-  }
-  
-  /* ICONOS */
-  @media (min-width: 768px){
-    
-  }
+}
+.icono img {
+  width: 5rem;
+  margin: 0 auto;
+}
+.icono h3 {
+  color: var(--primario);
+  text-transform: uppercase;
+  margin-top: calc(var(--separacion) / 2);
+}
