--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
 }
+
 *,
 *:before,
 *:after {
@@ -43,15 +44,19 @@ h3 {
   font-family: var(--fuenteSecundaria);
   margin: calc(var(--separacion) / 2) 0;
 }
+
 h1 {
   font-size: 4.4rem;
 }
+
 h2 {
   font-size: 3.6rem;
 }
+
 h3 {
   font-size: 2.8rem;
 }
+
 img {
   max-width: 100%;
   display: block;
@@ -67,11 +72,9 @@ img {
 .degradado-verde {
   /* para darle gradient al texto debemos primero darle transparencia ya q tiene un color y luego darle color al fondo para por ultimo aplicarlo al texto */
   color: transparent;
-  background: linear-gradient(
-    to right,
-    var(--primario) 0%,
-    var(--secundario) 100%
-  );
+  background: linear-gradient(to right,
+      var(--primario) 0%,
+      var(--secundario) 100%);
   -webkit-background-clip: text;
   background-clip: text;
 }
@@ -82,6 +85,7 @@ img {
   padding: calc(var(--separacion) * 3) 0;
   color: var(--blanco);
 }
+
 @media (min-width: 768px) {
   .contenido-header {
     display: grid;
@@ -103,6 +107,7 @@ img {
     padding: 0;
   }
 }
+
 .texto-header p {
   margin: 0;
 }
@@ -111,16 +116,19 @@ img {
   font-size: 3rem;
   font-weight: 900;
 }
+
 .nombre-producto {
   font-size: 6rem;
   margin: 0;
 }
+
 @media (min-width: 768px) {
   .nombre-producto {
     font-size: 10rem;
     line-height: 1;
   }
 }
+
 .precio-producto span {
   font-size: 6rem;
   font-weight: 900;
@@ -130,6 +138,7 @@ img {
 .iconos {
   padding: var(--separacion) 0;
 }
+
 @media (min-width: 768px) {
   .iconos {
     display: flex;
@@ -141,18 +150,22 @@ img {
   text-align: center;
   margin-bottom: calc(var(--separacion) / 2);
 }
+
 .icono:last-of-type {
   margin: 0;
 }
+
 @media (min-width: 768px) {
   .icono {
     margin: 0;
   }
 }
+
 .icono img {
   width: 5rem;
   margin: 0 auto;
 }
+
 .icono h3 {
   color: var(--primario);
   text-transform: uppercase;
@@ -160,28 +173,66 @@ img {
 }
 
 /* SOBRE TECH PRO */
-.sobre-tech{
-  background-image: linear-gradient( to bottom, transparent 50%, var(--primario) 0% ), url(../img/imagen-mujer.jpg);
+.sobre-tech {
+  background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
   background-position: right;
   background-repeat: repeat, no-repeat;
   background-size: 100%, 110rem;
 }
-.sobre-tech-grid{
+@media (min-width: 768px) {
+  .sobre-tech {
+    background-image: linear-gradient(to left, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
+  }
+}
+@media (min-width: 1600px) {
+  .sobre-tech {
+    background-size: 100%, 210rem;
+  }
+}
+.sobre-tech-grid {
   display: grid;
   grid-template-rows: repeat(2, 40rem);
   row-gap: var(--separacion);
 }
-.texto-sobre-tech{
+@media (min-width: 768px) {
+  .sobre-tech-grid {
+    grid-template-rows: unset;
+    row-gap: unset;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 4rem;
+    padding: calc(var(--separacion) * 2) 0;
+  }
+}
+.texto-sobre-tech {
   grid-row: 2 / 3;
   color: var(--blanco);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding-bottom: var(--separacion);
 }
-.texto-sobre-tech h2{
+@media (min-width: 768px) {
+  .texto-sobre-tech {
+    padding-bottom: 0;
+  }
+}
+.texto-sobre-tech h2 {
   font-size: 4rem;
 }
-.texto-sobre-tech p{
+.texto-sobre-tech p {
   font-size: 2rem;
   line-height: 2;
+}
+
+/* MODELOS */
+.modelos{
+  padding: var(--separacion) 0;
+}
+.header-modelos{
+  font-size: 6rem;
+  margin-bottom: var(--separacion);
+}
+.listado-modelos{
+  display: flex;
+  flex-direction: column-reverse;
 }
