--- a/css/styles.css
+++ b/css/styles.css
@@ -179,21 +179,25 @@ img {
   background-repeat: repeat, no-repeat;
   background-size: 100%, 110rem;
 }
+
 @media (min-width: 768px) {
   .sobre-tech {
     background-image: linear-gradient(to left, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
   }
 }
+
 @media (min-width: 1600px) {
   .sobre-tech {
     background-size: 100%, 210rem;
   }
 }
+
 .sobre-tech-grid {
   display: grid;
   grid-template-rows: repeat(2, 40rem);
   row-gap: var(--separacion);
 }
+
 @media (min-width: 768px) {
   .sobre-tech-grid {
     grid-template-rows: unset;
@@ -203,6 +207,7 @@ img {
     padding: calc(var(--separacion) * 2) 0;
   }
 }
+
 .texto-sobre-tech {
   grid-row: 2 / 3;
   color: var(--blanco);
@@ -211,28 +216,102 @@ img {
   justify-content: space-around;
   padding-bottom: var(--separacion);
 }
+
 @media (min-width: 768px) {
   .texto-sobre-tech {
     padding-bottom: 0;
   }
 }
+
 .texto-sobre-tech h2 {
   font-size: 4rem;
 }
+
 .texto-sobre-tech p {
   font-size: 2rem;
   line-height: 2;
 }
 
 /* MODELOS */
-.modelos{
+.modelos {
   padding: var(--separacion) 0;
 }
-.header-modelos{
+
+.header-modelos {
   font-size: 6rem;
   margin-bottom: var(--separacion);
 }
-.listado-modelos{
+
+.listado-modelos {
   display: flex;
   flex-direction: column-reverse;
+}
+@media (min-width: 992px) {
+  .listado-modelos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 20rem);
+    gap: 4rem;
+  }
+}
+
+.modelo {
+  background-color: var(--grisClaro);
+  margin-bottom: 2rem;
+  padding-left: 4rem;
+  color: var(--primario);
+  border-radius: 2rem;
+  min-height: 20rem;
+  background-repeat: no-repeat;
+  background-position: 90% center;
+  background-size: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+@media (min-width:992px) {
+  .modelo{
+    margin-bottom: 0;
+  }
+}
+
+.modelo h3 {
+  font-size: 2.4rem;
+}
+
+.modelo .precio {
+  font-size: 4rem;
+  font-weight: 900;
+  line-height: 0;
+}
+
+.modelo:first-of-type {
+  margin-bottom: 0;
+}
+
+.modelo-x {
+  background-image: url(../img/modelo-x.svg);
+}
+
+.modelo-y {
+  background-image: url(../img/modelo-y.svg);
+}
+
+.modelo-z {
+  background-image: url(../img/modelo-z.svg);
+  background-color: var(--primario);
+  color: var(--blanco);
+}
+@media (min-width:992px) {
+  .modelo-z {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    background-size: 25rem;
+  }
+  .modelo-z h3{
+    font-size: 4rem;
+  }
+}
+.modelo-z .precio {
+  font-size: 6rem;
 }
