--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,12 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  transition-property: transform background-size;
+  transition-duration: 300ms;
+}
+.modelo:hover{
+  transform: scale(1.1) rotate(2deg);
+  background-size: 30rem
 }
 @media (min-width:992px) {
   .modelo{
@@ -314,4 +320,71 @@ img {
 }
 .modelo-z .precio {
   font-size: 6rem;
+}
+
+/* NEWSLETTER */
+.newsletter{
+  background-image: linear-gradient( to bottom, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg);
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: 100%, 70rem;
+}
+@media (min-width: 768px) {
+  .newsletter{
+    background-image: linear-gradient( to right, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg);
+    background-position: center, -21rem 0rem;
+    background-size: 100%, 100rem;
+    padding: 10rem 0;
+  }
+}
+@media (min-width: 2200px) {
+  .newsletter{
+    background-size: 100%, 200rem;
+    background-position: center, 0% -30rem;
+  }
+}
+.contenido-newsletter{
+  display: grid;
+  grid-template-rows: repeat(2, 30rem);
+  gap: var(--separacion);
+}
+@media (min-width:768px) {
+  .contenido-newsletter{
+    grid-template-rows: unset;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.texto-newsletter{
+  grid-row: 2 / 3;
+}
+@media (min-width: 768px) {
+  .texto-newsletter{
+    grid-row: unset;
+    grid-column: 2 / 3;
+  }
+}
+
+.formulario input[type="email"]{
+  width: 100%;
+  padding: 1rem;
+}
+.formulario input[type="submit"]{
+  width: 100%;
+  padding: 2rem;
+  background-color: var(--primario);
+  color: var(--blanco);
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 900;
+  border: none;
+}
+
+/* FOOTER */
+.footer p{
+  text-align: center;
+  font-family: var(--fuenteSecundaria);
+  text-transform: uppercase;
+  font-size: 2rem;
+  color: var(--primario);
+  padding: 2rem 0;
 }
