--- a/css/styles.css
+++ b/css/styles.css
@@ -174,15 +174,33 @@ img {
 
 /* SOBRE TECH PRO */
 .sobre-tech {
-  background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
   background-position: right;
   background-repeat: repeat, no-repeat;
   background-size: 100%, 110rem;
 }
+.notavif.notwebp .sobre-tech{
+  background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
+}
+.webp .sobre-tech{
+  background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.webp);
+}
+.avif .sobre-tech{
+  background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.avif);
+}
 
 @media (min-width: 768px) {
   .sobre-tech {
+    background-repeat: no-repeat;
+  }
+
+  .notavif.notwebp .sobre-tech{
     background-image: linear-gradient(to left, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
+  }
+  .webp .sobre-tech{
+    background-image: linear-gradient(to left, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.webp);
+  }
+  .avif .sobre-tech{
+    background-image: linear-gradient(to left, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.avif);
   }
 }
 
@@ -324,17 +342,33 @@ img {
 
 /* NEWSLETTER */
 .newsletter{
-  background-image: linear-gradient( to bottom, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg);
   background-position: top center;
   background-repeat: no-repeat;
   background-size: 100%, 70rem;
 }
+.notavif.notwebp .newsletter{
+  background-image: linear-gradient( to bottom, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg);
+}
+.webp .newsletter{
+  background-image: linear-gradient( to bottom, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg);
+}
+.avif .newsletter{
+  background-image: linear-gradient( to bottom, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.webp);
+}
 @media (min-width: 768px) {
   .newsletter{
-    background-image: linear-gradient( to right, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg);
     background-position: center, -21rem 0rem;
     background-size: 100%, 100rem;
     padding: 10rem 0;
+  }
+  .notavif.notwebp .newsletter{
+    background-image: linear-gradient( to right, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg);
+  }
+  .webp .newsletter{
+    background-image: linear-gradient( to right, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.webp);
+  }
+  .avif .newsletter{
+    background-image: linear-gradient( to right, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.avif);
   }
 }
 @media (min-width: 2200px) {
@@ -342,6 +376,7 @@ img {
     background-size: 100%, 200rem;
     background-position: center, 0% -30rem;
   }
+  
 }
 .contenido-newsletter{
   display: grid;
